examples/test/testpolicy16832.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16832
  namespace: namespace405
spec:
  podSelector:
    matchLabels:
      key36: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value34
          key17: value23
          key32: value40
      podSelector:
        matchLabels:
          key32: value14
          key23: value17
